--- a/SPBE-web/composer.json
+++ b/SPBE-web/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1||^8.2",
+        "asdh/laravel-flatpickr": "^2.0",
         "bkwld/cloner": "^3.11",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-frontend-presets/material-dashboard": "^2.0",
